--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
     </html>
 </head>
 <body>
-  <img src="logo.gif">
-  
-  <img src="download.png">
-  <img src="yippee-happy.gif">
-  <img src="AACD005E-7A15-461B-8BAA-EE338926BB14.jpeg">
-  <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/footsiefriends';" id="thebutton">Footsie Friends!</button>
-  <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/quoteindex';" id="thebutton">Quote Book</button>
+  <form>
+  <label for="pass">Password:</label>
+  <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField"/>
+  <input name="enter" type="button" onclick="clicked()" value="enter">
+  </form>
   <h3 style" font-style: bold;" >hosted my friend rsguy</h3>
+  <script src="index.js"></script>
 </body>
 </html>
 
