--- a/quoteindex/index.html
+++ b/quoteindex/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <link rel="icon" type="icon" href="2022_12_19_0fm_Kleki.png">
 </head>
-    <title>footsie friends</title>
+    <title>quotes of yobbish<title>
     </html>
 </head>
 <body>
