--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <link rel="icon" type="icon" href="icon.png">
 </head>
-    <title>yobbish</title>
+    <title>WEBSITE LOCKED!1!1!!111</title>
     </html>
 </head>
 <body>
