--- a/yobbish/index.html
+++ b/yobbish/index.html
@@ -20,7 +20,7 @@
   <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/footsiefriends';" id="thebutton">Footsie Friends!</button>
   <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/quoteindex';" id="thebutton">Quote Book</button>
   <h3 style" font-style: bold;" >hosted my friend rsguy</h3>
-  <h3>hi</h3>
+  <h3>hi i"m dave</h3>
 </body>
 </html>
 
