--- a/quoteindex/index.html
+++ b/quoteindex/index.html
@@ -17,7 +17,7 @@
   <h3 style >"People who like christmas music can kill their selfs" - Dec 20 2022 </h3>
   <h3 style >"Man shut yo *my singing monster sounds.mp4*" - Dec 20 2022 </h3>
   <h3 style >"[BLANK] should kill theirself. They like christmas music." - Dec 20 2022 </h3>
-  <h3 style >"hi i'm dave - dec 23 2022 </h3>
+  <h3 style >"hi i'm dave" - dec 23 2022 </h3>
     
   <h3 style" font-style: bold;" >hosted my friend rsguy</h3>
   <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/yobbish';" id="thebutton">Go back</button>
