--- a/footsiefriends/index.html
+++ b/footsiefriends/index.html
@@ -16,7 +16,7 @@
   <h1 style" font-style: bold;" ></h1>
   <img src="3DB1AD14-558D-46FB-A1A1-5C401D041B24.jpeg" alt="Italian Trulli" width="96" height="96">
   <img src="EE0558FE-859C-4786-9D27-E2E72674717B.jpeg" alt="Italian Trulli" width="96" height="96">
-  <h3 style" font-style: bold;" >hosted rsguy</h3>
+  <h3 style" font-style: bold;" >hosted by rsguy</h3>
   <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/yobbish';" id="thebutton">Go back</button>
 </body>
 </html>
