--- a/yobbish/index.html
+++ b/yobbish/index.html
@@ -19,7 +19,7 @@
   <img src="AACD005E-7A15-461B-8BAA-EE338926BB14.jpeg">
   <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/footsiefriends';" id="thebutton">Footsie Friends!</button>
   <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/quoteindex';" id="thebutton">Quote Book</button>
-  <h3 style" font-style: bold;" >hosted rsguy</h3>
+  <h3 style" font-style: bold;" >hosted by rsguy</h3>
   <h3 style" font-style: italic;" >hi i"m dave</h3>
 </body>
 </html>
