--- a/gamelibrary/index.html
+++ b/gamelibrary/index.html
@@ -13,9 +13,12 @@
     </html>
 </head>
 <body>
-  <h1 style" font-style: bold;" >games</h1>
-    
-  <h3 style" font-style: bold;" >hosted by yobbish</h3>
+  <h1 style" font-style: bold;" >The game library!</h1>
+  <h2 >Take a look our finest games/minigames for free!</h2>
+  <h1 style" font-style: bold;" > </h1>
+  <input type="image" src="rasincookie.png" onclick="location.href = 'https://resteguy.github.io/myfriendssite/yobbish';"/>
+  <h3 style" font-style: bold;" >hosted by rsguy</h3>
+  <h3 style" font-style: bold;" >coded by yobbish and rsguy</h3>
   <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/yobbish';" id="thebutton">Go back</button>
 </body>
 </html>
