--- a/gamelibrary/index.html
+++ b/gamelibrary/index.html
@@ -17,6 +17,7 @@
   <h2 >Take a look our finest games/minigames for free!</h2>
   <h1 style" font-style: bold;" > </h1>
   <input type="image" src="rasincookie.png" onclick="location.href = 'https://resteguy.github.io/myfriendssite/gamelibrary/raisin';"/>
+  <input type="image" src="augh.png" onclick="location.href = 'https://resteguy.github.io/myfriendssite/gamelibrary/augh';"/>
   <h3 style" font-style: bold;" >hosted by rsguy</h3>
   <h3 style" font-style: bold;" >coded by yobbish and rsguy</h3>
   <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/yobbish';" id="thebutton">Go back</button>
