--- a/yobbish/index.html
+++ b/yobbish/index.html
@@ -20,6 +20,7 @@
   <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/footsiefriends';" id="thebutton">Footsie Friends!</button>
   <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/quoteindex';" id="thebutton">Quote Book</button>
   <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/gamelibrary';" id="thebutton">games</button>
+  <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/nothing';" id="thebutton">you will see</button>
   <h3 style" font-style: bold;" >hosted by rsguy</h3>
   <h3 style" font-style: italic;" >hi i'm dave</h3>
 </body>
