--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
-    <link rel="icon" type="icon" href="icon.png">
+    <link rel="icon" type="icon" href="2023_1_8_0fm_Kleki.png">
 </head>
-    <title>WEBSITE LOCKED!1!1!!111</title>
+    <title>something</title>
+</head>
     </html>
 </head>
 <body>
-  <form>
-  <label for="pass">Password:</label>
-  <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField"/>
-  <input name="enter" type="button" onclick="clicked()" value="enter">
-  </form>
-  <h3 style" font-style: bold;" >hosted my friend rsguy</h3>
-  <script src="index.js"></script>
+  <h1 style" font-style: bold;" >i did something are you proud of me</h1>
+    
+  <h3 style" font-style: bold;" >hosted by yobbish</h3>
+  <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/yobbish';" id="thebutton">Go back</button>
 </body>
 </html>
-
