--- a/yobbish/index.html
+++ b/yobbish/index.html
@@ -15,7 +15,7 @@
   <h1 style" font-style: bold;" ></h1>
   <button onclick="location.href = 'https://resteguy.github.io/myfriendssite/gamelibrary';" id="thebutton">games</button>
   <h3 style" font-style: bold;" >hosted by rsguy</h3>
-  <h3 style" font-style: italic;" >hi i'm dave</h3>
+  <h3 style" font-style: italic;" >check out yobbish_man on scratch</h3>
 </body>
 </html>
 
