--- a/yobbish/index.html
+++ b/yobbish/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <link rel="icon" type="icon" href="icon.png">
 </head>
-    <title>yobbish</title>
+    <title>home</title>
     </html>
 </head>
 <body>
