--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField"/>
   <input name="enter" type="button" onclick="clicked()" value="enter">
   </form>
-  <h3 style" font-style: bold;" >hosted my friend rsguy also elijah stop changing the main page.</h3>
+  <h3 style" font-style: bold;" >hosted my friend rsguy.</h3>
   <script src="index.js"></script>
 </body>
 </html>
